--- a/package.json
+++ b/package.json
@@ -9,10 +9,6 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/mdx": "^4.3.0",
-    "@astrojs/rss": "^4.0.12",
-    "@astrojs/sitemap": "^3.4.1",
-    "astro": "^5.9.3",
-    "sharp": "^0.34.2"
+    "astro": "^5.9.3"
   }
 }
