--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/markdown-remark": "^6.3.2",
     "@tailwindcss/vite": "^4.1.10",
     "astro": "^5.9.3",
+    "shiki": "^3.7.0",
     "tailwindcss": "^4.1.10"
   }
 }
